--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^.*$ /brainload/index.php [L,QSA] 
+RewriteRule ^.*$ /kpulbrain/index.html [L,QSA] 
